fixed minor issue on login/register having *slighty* too much margin. made resetAnimation not reset animations for more than 40 tiles each time

--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -25,7 +25,7 @@ a:hover {
 
 #loginTitle, #regTitle {
     font-size: 40px;
-    margin: -10px -10px 2% -10px;    
+    margin: -10px -8px 2% -10px;    
     text-align: center;
     font-family: Courgette, serif;
     color: black;
